# data-firestore-connector

./: examples.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
dealroom_firestore_connector/: __init__.py  batch.py  exceptions.py  helpers.py  identifier.py  status_codes.py
tests/: test_all.py
